<resources>
    <string name="app_name">NextSdkAndroidExample</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Next Millennium SDK Example</string>
    <string name="nav_header_subtitle">support@nextmillennium.io</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="rewarded_ad">Rewarded ad</string>
    <string name="interstitial_ad">Interstitial ad</string>
    <string name="banner_ads">Banner ads</string>
    <string name="enter_unit_id">Enter unit id</string>
    <string name="load">Load</string>
    <string name="banner">Banner (320x50)</string>
    <string name="banner_large">Large banner (320x100)</string>
    <string name="banner_medium_rectangle">Medium rectangle (300x250) collapsed</string>
    <string name="banner_anchored">Anchored banner</string>
    <string name="banner_inline">Inline banner</string>
    <string name="native_ad">Native Ad</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="load_all">Load all</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur dolorem dolores doloribus et iste laboriosam nisi numquam pariatur praesentium provident quod repellat repudiandae, tempore unde voluptates. Asperiores modi quod similique!</string>
    <string name="app_open_ad">App Open ad</string>
    <string name="banners_in_recyclerview">Banners in RecyclerView</string>
    <string name="container">Container</string>
    <string name="custom">Custom</string>
    <string name="insertion_mode">Insertion mode</string>
    <string name="top">Top</string>
    <string name="bottom">Bottom</string>
    <string name="reload">Reload</string>
</resources>